--- a/package.json
+++ b/package.json
@@ -11,33 +11,37 @@
 		"clean": "gatsby clean"
 	},
 	"dependencies": {
+		"@material-ui/core": "^4.9.2",
 		"@material-ui/icons": "^4.9.1",
-		"@reach/router": "^1.3.1",
 		"babel-plugin-styled-components": "^1.10.7",
 		"gatsby": "^2.19.17",
+		"gatsby-background-image": "^0.9.16",
 		"gatsby-image": "^2.2.41",
 		"gatsby-plugin-manifest": "^2.2.41",
 		"gatsby-plugin-netlify": "^2.1.32",
-		"gatsby-plugin-offline": "^3.0.34",
+		"gatsby-plugin-prefetch-google-fonts": "^1.4.3",
 		"gatsby-plugin-react-helmet": "^3.1.22",
 		"gatsby-plugin-react-svg": "^3.0.0",
 		"gatsby-plugin-sharp": "^2.4.5",
-		"gatsby-plugin-smoothscroll": "^1.0.4",
 		"gatsby-plugin-styled-components": "^3.1.19",
 		"gatsby-plugin-typescript": "^2.1.27",
 		"gatsby-source-filesystem": "^2.1.48",
 		"gatsby-transformer-sharp": "^2.3.14",
-		"lottie-web": "^5.6.4",
+		"lodash.throttle": "^4.1.1",
 		"react": "^16.12.0",
 		"react-dom": "^16.12.0",
 		"react-helmet": "^5.2.1",
-		"react-modal": "^3.11.1",
-		"react-spring": "^8.0.27",
+		"react-hooks-use-modal": "^1.0.5",
+		"react-lottie": "^1.2.3",
+		"react-reveal": "^1.2.2",
 		"styled-components": "^5.0.1",
 		"styled-normalize": "^8.0.7"
 	},
 	"devDependencies": {
+		"@types/node": "^13.7.1",
+		"@types/react": "^16.9.19",
 		"@types/react-helmet": "^5.0.15",
+		"@types/react-lottie": "^1.2.3",
 		"@types/styled-components": "^4.4.3",
 		"@typescript-eslint/eslint-plugin": "^2.19.2",
 		"@typescript-eslint/parser": "^2.19.2",
