--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"@material-ui/icons": "^4.9.1",
 		"babel-plugin-styled-components": "^1.10.7",
 		"gatsby": "^2.19.18",
-		"gatsby-background-image": "^0.10.0",
+		"gatsby-background-image": "^0.10.1",
 		"gatsby-image": "^2.2.41",
 		"gatsby-plugin-manifest": "^2.2.41",
 		"gatsby-plugin-netlify": "^2.1.32",
@@ -31,15 +31,16 @@
 		"react": "^16.12.0",
 		"react-dom": "^16.12.0",
 		"react-helmet": "^5.2.1",
-		"react-hooks-use-modal": "^1.0.5",
+		"react-hooks-use-modal": "^1.0.6",
 		"react-lottie": "^1.2.3",
 		"react-waypoint": "^9.0.2",
 		"styled-components": "^5.0.1",
 		"styled-normalize": "^8.0.7"
 	},
 	"devDependencies": {
-		"@types/node": "^13.7.1",
-		"@types/react": "^16.9.19",
+		"@types/node": "^13.7.2",
+		"@types/react": "^16.9.20",
+		"@types/react-dom": "^16.9.5",
 		"@types/react-helmet": "^5.0.15",
 		"@types/react-lottie": "^1.2.3",
 		"@types/styled-components": "^4.4.3",
