--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 		"eslint-plugin-import": "^2.20.1",
 		"eslint-plugin-prettier": "^3.1.2",
 		"eslint-plugin-react": "^7.18.3",
+		"eslint-plugin-react-hooks": "^2.4.0",
 		"gatsby-plugin-eslint": "^2.0.8",
 		"husky": "^4.2.3",
 		"lint-staged": "^10.0.7",
